# Aletheia_2.1

./: .gitignore  Aletheia_PRD_v1.0.docx  Aletheia_Product_Blueprint_Sprint0.docx  LICENSE  README.md  docker-compose.yml  docs_output.txt  package-lock.json
.github/workflows/: backend.yml  deploy.yml  frontend.yml
backend/: RAILWAY_DEPLOY.md  malabar.db  package-lock.json  package.json  prisma.config.ts
backend/prisma/: schema.note  schema.prisma  seed.js
backend/scripts/: check_users.js  test_password.js
backend/src/: app.js  server.js
backend/src/blockchain/: stellar.service.js
backend/src/config/: database.js  env.js  jwt.js  stellar.js
backend/src/middleware/: auth.middleware.js  upload.middleware.js  (+1 more)
contracts/: Cargo.toml  README.md
contracts/fractional-sale/src/: lib.rs
contracts/fractional-sale/test_snapshots/tests/: test_auto_close_on_full_subscription.1.json  test_list_and_buy_share.1.json
contracts/receivable-registry/src/: lib.rs
contracts/receivable-registry/test_snapshots/tests/: test_duplicate_attestation_rejected.1.json  test_register_and_attest.1.json
contracts/rwt-token/: Cargo.toml
contracts/rwt-token/src/: lib.rs
contracts/settlement-escrow/src/: lib.rs
contracts/settlement-escrow/test_snapshots/tests/: test_confirm_and_distribute.1.json  test_unauthorized_oracle_rejected.1.json
docs/: stellar-architecture.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend
scripts/: deploy-contracts.sh  setup-testnet.sh
(+52 files in other folders)
